--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,14 @@
 Flask==2.2.5
 flask-cors==4.0.1
 gunicorn==21.2.0
-
 opencv-python-headless==4.9.0.80
 Pillow==10.3.0
 PyMySQL==1.1.0
-
 numpy==1.26.4
 pandas==2.1.4
-
-ultralytics==8.3.25
-
-flask
+pymysql
 werkzeug
-ultralytics
-opencv-python
-pandas
 openpyxl
 mysql-connector-python>=8.0.0
 cryptography==41.0.7
+pyzbar==0.1.9
